Mon Jan  6 03:25:16 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display_pages): Drop privileges if candp->path is a
	  user manpath. Inner code generally dropped privileges anyway,
	  certainly when running external commands, but the absence of this
	  drop meant that pages in non-world-readable user manpaths could
	  not be read.

Mon Jan  6 03:19:57 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* lib/error.c (error): Print a backtrace if the BACKTRACE_ON_ERROR
	  symbol is defined. This undoubtedly isn't portable and is not
	  intended for production use; it's just a last-resort way to get a
	  backtrace when the usual methods fail, chiefly when running
	  setuid.

Tue Dec 31 04:39:03 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (man): If update is set, need_to_rerun() will always
	  have been called already by now. Remove this redundant code.

Tue Dec 31 04:26:50 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* man/man1/apropos.man1, man/man1/lexgrog.man1,
	  man/man1/manpath.man1, man/man1/whatis.man1,
	  man/man1/zsoelim.man1: --version no longer displays author
	  information.

Sun Dec 29 19:57:55 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c, src/check_mandirs.h: Move page_description
	  interface functions to ...
	* src/descriptions.c, src/descriptions.h: ... here (new files).
	* src/Makefile.in (man, mandb): Link descriptions.o.

	* libdb/db_storage.h: Include libdb/mydbm.h for the datum type.

Sun Dec 29 19:51:11 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Add commas between short and long options in usage
	  output.

	* src/accessdb.c (main): Support -h/--help and -v/--version options.
	  (usage): Document them. Move MAN_DB outside translatable string.
	* man/man8/accessdb.man8 (SYNOPSIS, OPTIONS): Document new options.
	  (AUTHOR): Add myself.
	* src/globbing.c (long_options, args, main): Support -h/--help and
	  -v/--version options.
	  (usage): New function.