@@ -1,3 +1,8 @@
+Tue Jan 21 01:42:16 GMT 2003  Colin Watson  <cjwatson@debian.org>
+
+	* src/mandb.c (xcopy, main): Minor whitespace cleanups.
+	* src/ult_src.c: Fix typo (loosing -> losing).
+
 Mon Jan  6 03:25:16 GMT 2003  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (display_pages): Drop privileges if candp->path is a
